--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Jogo Genius">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Jogo Genius</title>
 </head>
 <body>
-    
+    <div class="main-game">
+        <div class="genius">
+            <div class="blue"></div>
+            <div class="yellow"></div>
+            <div class="green"></div>
+            <div class="red"></div>
+        </div>
+    </div>    
+    <script src="script.js"></script>
 </body>
-</html>""
+</html>
